[package]
name = "peekaboo"
version = "0.1.0"
authors = ["kujenga <git@ataylor.io>"]
edition = "2021"

[dependencies]
axum = "0.5"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = "0.21"
image = "0.24"
num = "0.4"
time = "0.3"
urlencoded = "0.6"
handlebars = "4"
